--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,16 +1,17 @@
 .home-background {
-  background-image: url(C:\Users\3mand\teste\src\assets\mesh-200.png);
+  background-image: url(C:\Users\3mand\teste\src\assets\mesh-693.png);
   background-repeat: no-repeat;
   padding: 320px 0;
   position: relative;
   overflow: hidden;
   font-weight: 500;
   background-size: 1810px;
- background-size: cover;
+ background-size:contain;
 }
 
 body {
-  background-color: #e1e8ba;
+  background-color: #fff5ee;
+  background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -72,59 +73,91 @@ body {
 
 
 /* Estilização do vídeo */
-.video-left {
-  width: 100px;
-  height: auto;
+.video {
+  width: 700px; /* Tamanho reduzido do vídeo */
+  max-width: 900px; /* Largura máxima */
+  height: auto; /* Manter a proporção do vídeo */
   border-radius: 45px;
-  margin-left: 750px;
-  position: relative;
-  top: 50px; /* Ajuste o valor conforme necessário */
-  display: block;
+  margin-left: 800px; /* Move o vídeo para a direita */
+margin-top: 90px;}
+
+
+
+.grafico {
+  margin-top: -680px;
+  margin-left: 700px;
+  width: 900px;  /* Aumentando a largura */
+  height: auto; /* Mantém a proporção */
+  max-width: 1000px; /* Permite que aumente até um certo limite */
+}
+.grafico img {
+  transform: scale(1.3); /* Aumenta a imagem em 50% */
+}
+
+.saiba h3{
+  margin-top: 80px ;
+  align-items: center;
+  margin-left: 600px;
+  color: darkkhaki;
+  justify-content: center;
+  font-weight: 610;
+  font-size: 33px;
+
+
 }
 
 
-
-/* Seção de Testemunhos */
-
-.testimonials {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start; /* Alinha a seção à esquerda */
-  margin-left: -85px; /* Ajusta a posição para a esquerda */
-  padding: 50px 1;
-  margin-top: 310px;
-}
-
-
-
-
-.testimonials h2 {
-  font-size: 32px;
-  display: flex;
+ .saiba2{
+  align-items: center;
+  margin-left: 480px;
+  justify-content: center;
   font-weight: 600;
-  color: #292929; /* Cor roxa do título */
   text-align: center;
-  padding-left: 500px;
-  margin-bottom: 30px;
+  font-size:26px;
+
+  padding-bottom: 30px;
+  color: rgb(170, 26, 26);
+
+
+ }
+
+
+
+
+.frase1 {
+  font-size: 33px;
+  color: #e7bf2b;
+  font-weight: 700;
   position: relative;
+  top: 480px; /* Move a frase para cima. Ajuste conforme necessário */
+  margin-left: -90px; /* Garante que o texto vai à esquerda */
 }
 
 
 
-h2 {
-  position: relative;
-  display: inline-block; /* Garante que a linha fique alinhada com o texto */
-  font-size: 32px;
-  font-weight: 600;
-  color: #292929;
-  text-align: center;
-  transition: color 0.3s ease-in-out;
+.subtitulo {
+  font-size: 20px;
+  color: #4e4e4e;
+  font-weight: 500;
+  margin-top: 15px; /* Espaçamento entre o título e o subtítulo */
+  white-space: pre-wrap; /* Faz com que quebras de linha sejam respeitadas */
+  word-wrap: break-word; /* Garante que as palavras não saiam da tela */
+  line-height: 1.6; /* Ajusta o espaçamento entre as linhas */
+  width: 60%; /* Garante que o subtítulo ocupe 100% da largura da tela */
+  text-align: left;
+
 }
+
+
+
+
+
+
 
 h2::after {
   content: "";
   position: absolute;
-  left: 50%;
+  left: 20%;
   bottom: -8px; /* Distância da linha em relação ao texto */
   width: 0%;
   height: 3px;
@@ -137,6 +170,46 @@ h2::after {
 h2:hover::after {
   width: 60%;
 }
+
+
+h2 {
+  position: relative;
+  display: inline-block; /* Garante que a linha fique alinhada com o texto */
+  font-size: 32px;
+  font-weight: 600;
+  transition: color 0.3s ease-in-out;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Seção de Testemunhos */
+
+.testimonials {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Alinha a seção à esquerda */
+  margin-left: -85px; /* Ajusta a posição para a esquerda */
+  padding: 50px 1;
+  margin-top: 320px;
+  padding-left: 10px;
+  
+}
+
+
+
+
+
+
 
 
 
@@ -155,8 +228,8 @@ h2:hover::after {
   border-radius: 15px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   text-align: left;
-  padding: 20px;
-  width: 250px; /* Tamanho exato do card */
+  padding: 40px;
+  width: 290px; /* Tamanho exato do card */
   position: relative; /* Permite movimentação */
   border: none ;
 
