--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,12 +1,12 @@
 .home-background {
-  background-image: url(C:\Users\3mand\teste\src\assets\mesh-693.png);
+  background-image: url(C:\Users\3mand\teste\src\assets\mesh-137.png);
   background-repeat: no-repeat;
   padding: 320px 0;
   position: relative;
   overflow: hidden;
   font-weight: 500;
   background-size: 1810px;
- background-size:contain;
+ background-size:cover;
 }
 
 body {
@@ -18,7 +18,6 @@ body {
   margin: 0;
   padding: 0;
 }
-
 
 
 /* Estilo do grupo de texto */
@@ -33,10 +32,9 @@ body {
   margin-left: -80px;
 }
 
-
 .text1{
   font-size: 33px;
-  color: #2b3128;
+  color: #242c24;
   font-weight: 700;
 }
 
@@ -46,7 +44,7 @@ body {
   padding-top: 10px;   /*espaco entre o texto */
   font-size: 20px;
   text-align: justify;
-  color:#353535
+  color:#383634;
 }
 
 
@@ -86,19 +84,19 @@ margin-top: 90px;}
 .grafico {
   margin-top: -680px;
   margin-left: 700px;
-  width: 900px;  /* Aumentando a largura */
+  width: 800px;  /* Aumentando a largura */
   height: auto; /* Mantém a proporção */
   max-width: 1000px; /* Permite que aumente até um certo limite */
 }
 .grafico img {
-  transform: scale(1.3); /* Aumenta a imagem em 50% */
+  transform: scale(1.2); /* Aumenta a imagem em 50% */
 }
 
 .saiba h3{
-  margin-top: 80px ;
+  margin-top: 70px ;
   align-items: center;
   margin-left: 600px;
-  color: darkkhaki;
+  color: rgb(179, 141, 61);
   justify-content: center;
   font-weight: 610;
   font-size: 33px;
@@ -116,7 +114,7 @@ margin-top: 90px;}
   font-size:26px;
 
   padding-bottom: 30px;
-  color: rgb(170, 26, 26);
+  color: rgb(168, 66, 48);
 
 
  }
@@ -126,7 +124,7 @@ margin-top: 90px;}
 
 .frase1 {
   font-size: 33px;
-  color: #e7bf2b;
+  color: #2c7936;
   font-weight: 700;
   position: relative;
   top: 480px; /* Move a frase para cima. Ajuste conforme necessário */
@@ -137,14 +135,15 @@ margin-top: 90px;}
 
 .subtitulo {
   font-size: 20px;
-  color: #4e4e4e;
+  color: #383737;
   font-weight: 500;
   margin-top: 15px; /* Espaçamento entre o título e o subtítulo */
   white-space: pre-wrap; /* Faz com que quebras de linha sejam respeitadas */
   word-wrap: break-word; /* Garante que as palavras não saiam da tela */
   line-height: 1.6; /* Ajusta o espaçamento entre as linhas */
   width: 60%; /* Garante que o subtítulo ocupe 100% da largura da tela */
-  text-align: left;
+  text-align: justify;
+  
 
 }
 
@@ -179,12 +178,6 @@ h2 {
   font-weight: 600;
   transition: color 0.3s ease-in-out;
 }
-
-
-
-
-
-
 
 
 
