--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,5 @@
 .home-background {
-  background-image: url(C:\Users\3mand\teste\src\assets\mesh-137.png);
+  background-image: url(C:\Users\3mand\teste\src\assets\AVTzR3ReNgKUAAAAAElFTkSuQmCC.png);
   background-repeat: no-repeat;
   padding: 320px 0;
   position: relative;
@@ -124,7 +124,7 @@ margin-top: 90px;}
 
 .frase1 {
   font-size: 33px;
-  color: #2c7936;
+  color: #2a5a30;
   font-weight: 700;
   position: relative;
   top: 480px; /* Move a frase para cima. Ajuste conforme necessário */
