--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #aeb9a7;
+  background-color: #b6caa2;
   color: rgb(0, 0, 0);
   text-align: left;
   padding: 40px;
