--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,10 +1,11 @@
 /* Tela inteira da página de login */
 .login-page {
   height: 100vh;
-  background-image: url(src/assets/mesh-693.png);
+  background-image: url(C:\Users\3mand\teste\src\assets\mesh-693.png);
   display: flex;
   align-items: center;
   justify-content: center;
+  background-size:auto;
 }
 
 
@@ -26,7 +27,9 @@ border: none;
 }
 
 
-
+.form-input{
+  color: #3c473c;
+}
 
 
 
@@ -82,7 +85,7 @@ border: none;
   color: #424d3ec5;
   font-size: 20px;
   font-weight: 400;
-  margin-bottom: 30px;
+  margin-bottom: 35px;
   margin-left: 20px;
 }
 
@@ -91,7 +94,7 @@ border: none;
 
 /* Campo de formulário */
 .form-group {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 
@@ -105,8 +108,9 @@ border: none;
   border-radius: 8px;
   outline: none;
   box-shadow: none;
-  color: aqua;
-  margin-top: 60px;
+  color: rgb(58, 61, 61);
+  margin-top: 20px;
+  margin-bottom: 20px;
   
 }
 
@@ -118,22 +122,73 @@ border: none;
   width: 100%;
   padding: 15px;
   font-size: 18px;
-  background-color: #3c473c;
+  background-color: #7c997c;
   color: rgb(255, 255, 255);
   border: none;
   border-radius: 8px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  margin-top: 80px;
+  margin-top: 90px;
 }
 
-
+ 
 
 
 .btn-login:hover {
-  background-color: #657765;
+  background-color: #a0b683;
+  transform: scale(1.001);
 }
+
+
+
 
 h2::after {
   display: none;
+}
+
+.toast-error {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  background-color: #dc3545;
+  color: white;
+  padding: 14px 22px;
+  border-radius: 8px;
+  font-size: 16px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  animation: fadeInUp 0.4s ease;
+  z-index: 9999;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
+
+
+.text-success {
+  color: rgb(110, 206, 110);
+  font-size: 0.9rem;
+
+}
+
+.text-danger {
+  color: rgb(206, 93, 64);
+  font-size: 0.8rem;
+  padding-bottom: -40px;
+}
+
+
+
+.password-rules div {
+  margin-bottom: 3px;
+  font-size: 13px;
 }
